<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
    android:id="@+id/asik"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/merah"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bantuan"
            android:textSize="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </TableRow>

    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="Di Aplikasi ini terdapat 6 menu pilihan, diantara nya :"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="1. Menu Katalog"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center|bottom"
            android:text="@string/katalog"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="2. Menu Materi"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center|bottom"
            android:text="@string/materi"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="3. Menu Soal"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center|bottom"
            android:text="@string/soal"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="4. Menu Tugas"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center|bottom"
            android:text="@string/tugas"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="5. Menu Update"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center|bottom"
            android:text="@string/update"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="5. Menu Log Out"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
            <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center|bottom"
            android:text="@string/LogOut"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    </LinearLayout>
    </ScrollView>